2004-09-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (list_access_check)  Remove
	definition test, which was preventing reply messages
	from being sent.

	* lib/Mj/Resend.pm:  (post)  Do not send an ack if the
	reply is NONE.  Thanks to SRE.

2004-09-11  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Add support for directory and file
	creation and deletion.

	* lib/Majordomo.pm:  (_put) Untaint the file name.

	* lib/Mj/Format.pm:  (put)  Support the put_delete
	and put_dir format files.

2004-09-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (put)  Support PARENT and PATH
	substitutions.

2004-09-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (archive_start)  Initialize to avoid
	warnings.

	* lib/Mj/Access.pm:  (list_access_check)  Initialize the
	victim variable.
	(_a_default)  Supply a reason when "list" access causes
	a request to be denied.

	* lib/Mj/Format.pm:  (g_get)  File and directory substitutions
	only apply to the "get" command.

	* lib/Mj/List.pm:  (is_subscriber)  Add a definition test
	to avoid crashing.

2004-09-08  Michael Yount <csf@moscow.com>

	* bin/mj_confirm:  Clear the token after the accept or
	reject command is issued.  Thanks to Steven Orr.

	* bin/mj_wwwusr:  Bugfix:  Initialize variable to
	avoid access check crash.  Thanks to Roger Klorese.

	* lib/Majordomo.pm:  (_faq, help_start, _info, _intro)
	Allow files to be mailed from the wwwadm interface.

	* lib/Mj/Format.pm:  (help, g_get)  Allow files to be
	mailed from the wwwadm interface.

	* lib/Mj/Parser.pm:  (parse_part)  Add blank lines for
	readability.

2004-09-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_changeaddr)  Preserve 
	subscriptions from aliased addresses.
	(_unalias)  Correct subscription addresses and alias
        targets.

2004-09-05  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_alias_reverse_lookup)  Base the
	lookup on the target, not the striptarget, field.