@@ -1,0 +1,6 @@
+WWW confirmation who command format.
+R
+text/plain
+us-ascii
+7bit
+en
